# test-soft-media-group

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
application/: main.py
application/config/: config.py
application/database/: __init__.py  database.py  models.py  redis.py
application/exceptions/: __init__.py  posts.py
application/logic/: __init__.py  services.py
application/rest/: posts.py
application/schemas/: __init__.py
application/tests/: test_api.py
docker/: Dockerfile
